--- a/HTML/CSS/article.css
+++ b/HTML/CSS/article.css
@@ -1,9 +1,9 @@
 article
 {
   width:90%;
-  height:92%;
+  height:auto;
   position:absolute;
-  top:8%;
+  top:46px;
   right:0;
   bottom:0;
   left:0;
