--- a/HTML/CSS/map.css
+++ b/HTML/CSS/map.css
@@ -1,14 +1,9 @@
-html
-{
-  font: 14px/16px Arial, Helvetica, sans-serif;
-}
-
 #mapid
 {
   width:100%;
-  height:92%;
+  height:auto;
   position:absolute;
-  top:8%;
+  top:46px;
   right:0;
   bottom:0;
   left:0;
