--- a/HTML/CSS/menu.css
+++ b/HTML/CSS/menu.css
@@ -1,9 +1,14 @@
+html
+{
+  font: 14px/16px Arial, Helvetica, sans-serif;
+}
+
 #cssmenu {
   position: fixed !important;
   top: 0px;
   left: 0px;
   width: 100%;
-  height: 8%;
+  height: 46px;
 }
 
 #cssmenu,
